--- a/src/components/mainContainer/main.css
+++ b/src/components/mainContainer/main.css
@@ -1,3 +1,37 @@
-#container{
-    margin-top: 200px;
+#containerMiddle {
+  margin-top: 300px;
+}
+
+#container2{
+  margin-top: 150px;
+}
+
+
+#singerTag{
+    margin: 20px;
+    font-size: 12px;
+    background-color: rgb(245, 245, 61);
+    width: 40px;
+    height: 24px;
+    padding: 5px 0px;
+    text-align: center;
+}
+
+#singerTitle{
+    margin-top: -13px !important;
+
+}
+
+.profilePhoto{
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 10px;;
+}
+
+#profilePhotoReview{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
 }
