--- a/src/components/mainContainer/main.css
+++ b/src/components/mainContainer/main.css
@@ -1,16 +1,63 @@
 #containerMiddle {
-  margin-top: 300px;
+  margin-top: 300px;    
+  opacity: 1;
 }
+
+
 
 #container2{
   margin-top: 150px;
 }
 
+#headingContainer{
+    margin-top: 120px;
+   
+    
+}
+
+#headingContainer> h1{
+    margin-left: 100px;
+    margin-top: 100px;
+    font-size: 80px;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#headingContainer> h5{
+    margin-left: 100px;
+    margin-top: 20px;
+    font-size: 20px;
+
+}
+
+
+#likeContainer{
+    height: 200px;
+    width: 200px;
+    z-index: 2;
+    opacity: 1;
+    background-color: #0C1027;
+    border: 2px solid palevioletred;
+}
+
+#listLikeContainer{
+    height: 150px;
+    width: 100px;
+    background-color: #0C1027;;
+    color: white !important;
+}
+
+#listLikeContent{
+    background-color: #0C1027;;
+    color: white !important;
+    font-size: 20px;
+}
 
 #singerTag{
     margin: 20px;
     font-size: 12px;
     background-color: rgb(245, 245, 61);
+    color: black;
     width: 40px;
     height: 24px;
     padding: 5px 0px;
@@ -34,4 +81,27 @@
     width: 100%;
     height: 100%;
     margin-bottom: 20px;
+}
+
+#commentCard{
+    background-color: #0C1027;
+    border: 2px solid yellow;
+    border-radius: 5%;
+    box-shadow:  10px -10px rgba(5, 226, 255, 0.6);
+}
+
+#listGroup{
+    background-color: #0C1027 ;
+    border: none;
+}
+
+#listGroupItem{
+    background-color: #0C1027 ;
+    border: none;
+}
+
+#singerCard{
+    background-color: #151c42;
+    border-radius: 5%;
+    box-shadow:  8px -8px rgba(53, 55, 177, 0.6);
 }
